--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "mailjet/mailjet-apiv3-php": "^1.6",
         "messagebird/php-rest-api": "^3.1",
         "mollie/laravel-mollie": "^3.0",
+        "openai-php/laravel": "^0.11.0",
         "phpmailer/phpmailer": "^6.9",
         "pusher/pusher-php-server": "^7.2",
         "razorpay/razorpay": "^2.9",
